html skeleton added

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
 
   <link rel="icon" type="image/png" sizes="32x32" href="./assets/images/favicon-32x32.png">
-  
+  <link rel="stylesheet" href="index.css">
   <title>Frontend Mentor | Social links profile</title>
 
   <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
@@ -16,19 +16,29 @@
 </head>
 <body>
 
-  Jessica Randall
-  London, United Kingdom
-  "Front-end developer and avid reader."
-
-  GitHub
-  Frontend Mentor
-  LinkedIn
-  Twitter
-  Instagram
+ <div class="card">
+  <div class="card-header">
+    <img src="./assets/images/Meisam Azizpour.png" alt="user profile picture">
+    <div class="card-header--title">
+      <h2>Meisam Azizpour</h2>
+      <h3>Nomad, Free World</h3>
+    </div>
+      <h4>Front-end developer and general speaker.</h4>
+  </div>
+  <div class="card-body">
+    <ul>
+      <li><a href="https://github.com/meisam9/">GitHub</a></li>
+      <li><a href="https://www.frontendmentor.io/profile/meisam9">Frontend Mentor</a></li>
+      <li><a href="https://x.com/frontendDiary">Twitter</a></li>
+      <li><a href="https://www.linkedin.com/in/meisam-azizpour-61413967/">LinkedIn</a></li>
+      <li><a href="https://www.instagram.com/">Instagram</a></li>
+    </ul>
+  </div>
+</div>
   
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
+    Coded by <a href="https://www.frontendmentor.io/profile/meisam9">Meisam Azizpour</a>.
   </div>
 </body>
 </html>
