--- a/index.html
+++ b/index.html
@@ -8,11 +8,6 @@
   <link rel="stylesheet" href="index.css">
   <title>Frontend Mentor | Social links profile</title>
 
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
 </head>
 <body>
 
@@ -23,22 +18,19 @@
       <h2>Meisam Azizpour</h2>
       <h3>Nomad, Free World</h3>
     </div>
-      <h4>Front-end developer and general speaker.</h4>
+      <h4>"Front-end developer and general speaker."</h4>
   </div>
   <div class="card-body">
     <ul>
-      <li><a href="https://github.com/meisam9/">GitHub</a></li>
-      <li><a href="https://www.frontendmentor.io/profile/meisam9">Frontend Mentor</a></li>
-      <li><a href="https://x.com/frontendDiary">Twitter</a></li>
-      <li><a href="https://www.linkedin.com/in/meisam-azizpour-61413967/">LinkedIn</a></li>
-      <li><a href="https://www.instagram.com/">Instagram</a></li>
+      <li><a href="https://github.com/meisam9/" target="_blank">GitHub</a></li>
+      <li><a href="https://www.frontendmentor.io/profile/meisam9" target="_blank">Frontend Mentor</a></li>
+      <li><a href="https://x.com/frontendDiary" target="_blank">Twitter</a></li>
+      <li><a href="https://www.linkedin.com/in/meisam-azizpour-61413967/" target="_blank">LinkedIn</a></li>
+      <li><a href="https://www.instagram.com/" target="_blank">Instagram</a></li>
     </ul>
   </div>
 </div>
   
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="https://www.frontendmentor.io/profile/meisam9">Meisam Azizpour</a>.
-  </div>
+
 </body>
 </html>
